<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    android:padding="16dp"
    android:background="@drawable/background_spyro"
    >

    <!-- Título -->

    <!-- Botón de "Comenzar" -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif-condensed"
        android:text="RESUMEN"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/characters"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/des1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bocadillo1"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/dess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/worlds"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/des2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dess"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bocadillo1"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/collectibles"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/des22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desss"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bocadillo1"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dessss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des22"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title_about"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/des2222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dessss"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bocadillo1"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ComenzarBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desss"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/button_background"
        android:elevation="8dp"
        android:padding="16dp"
        android:text="Comenzar"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>